# ShapeLearner

./: .gitignore  README.md  common.mk
AFMMSkeleton/: .gitignore  (+13 more)
ODB/libodb-boost-2.4.0/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  libodb-boost-vc11.sln  libodb-boost-vc12.sln  libodb-boost-vc8.sln  libodb-boost.pc.in
ODB/libodb-boost-2.4.0/lib/: odb-boost-d.exp  odb-boost-d.lib  odb-boost.exp  odb-boost.lib
ODB/libodb-oracle-2.4.0/: INSTALL  Makefile.am  Makefile.in  NCUEL  README  aclocal.m4  bootstrap  configure  configure.ac  libodb-oracle-vc10.sln  libodb-oracle-vc11.sln  libodb-oracle-vc12.sln  libodb-oracle-vc8.sln  libodb-oracle-vc9.sln  libodb-oracle.pc.in
ODB/libodb-oracle-2.4.0/m4/: liboci.m4
ODB/libodb-qt-2.4.0/: INSTALL  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  libodb-qt.pc.in  libodb-qt4-vc10.sln  libodb-qt4-vc11.sln  libodb-qt4-vc12.sln  libodb-qt4-vc8.sln  libodb-qt4-vc9.sln  libodb-qt5-vc10.sln  libodb-qt5-vc11.sln  libodb-qt5-vc12.sln  libodb-qt5-vc9.sln
ODB/odb-examples-2.4.0/: Makefile.am  Makefile.in  examples-mssql-vc11.sln  examples-mssql-vc12.sln  examples-mssql-vc8.sln  examples-mysql-vc11.sln  examples-mysql-vc12.sln  examples-mysql-vc8.sln  examples-oracle-vc11.sln  examples-oracle-vc12.sln  examples-oracle-vc8.sln  examples-pgsql-vc11.sln  examples-pgsql-vc12.sln  examples-pgsql-vc8.sln  examples-sqlite-vc11.sln  examples-sqlite-vc12.sln  examples-sqlite-vc8.sln
ODB/odb-examples-2.4.0/access/: Makefile.am  Makefile.in  access-mssql-vc11.vcxproj  access-mssql-vc11.vcxproj.filters  access-mssql-vc12.vcxproj  access-mssql-vc12.vcxproj.filters  access-mssql-vc8.vcproj  access-mysql-vc11.vcxproj  access-mysql-vc11.vcxproj.filters  access-mysql-vc12.vcxproj  access-mysql-vc12.vcxproj.filters  access-mysql-vc8.vcproj  access-oracle-vc11.vcxproj  access-oracle-vc11.vcxproj.filters  access-oracle-vc12.vcxproj  access-oracle-vc12.vcxproj.filters  access-oracle-vc8.vcproj  access-pgsql-vc11.vcxproj  access-pgsql-vc11.vcxproj.filters  access-pgsql-vc12.vcxproj  access-pgsql-vc12.vcxproj.filters  access-pgsql-vc8.vcproj  access-sqlite-vc11.vcxproj  access-sqlite-vc11.vcxproj.filters  access-sqlite-vc12.vcxproj  access-sqlite-vc12.vcxproj.filters  access-sqlite-vc8.vcproj  person-odb.cxx  person-odb.hxx  person.sql
ODB/odb-examples-2.4.0/boost/: Makefile.am  Makefile.in  boost-mssql-vc11.sln  boost-mssql-vc11.vcxproj  boost-mssql-vc11.vcxproj.filters  boost-mssql-vc12.sln  boost-mssql-vc12.vcxproj  boost-mssql-vc12.vcxproj.filters  boost-mssql-vc8.sln  boost-mssql-vc8.vcproj  boost-mysql-vc11.sln  boost-mysql-vc11.vcxproj  boost-mysql-vc11.vcxproj.filters  boost-mysql-vc12.sln  boost-mysql-vc12.vcxproj  boost-mysql-vc12.vcxproj.filters  boost-mysql-vc8.sln  boost-mysql-vc8.vcproj  boost-oracle-vc11.sln  boost-oracle-vc11.vcxproj  boost-oracle-vc11.vcxproj.filters  boost-oracle-vc12.sln  boost-oracle-vc12.vcxproj  boost-oracle-vc12.vcxproj.filters  boost-oracle-vc8.sln  boost-oracle-vc8.vcproj  boost-pgsql-vc11.sln  boost-pgsql-vc11.vcxproj  boost-pgsql-vc11.vcxproj.filters  boost-pgsql-vc12.sln  boost-pgsql-vc12.vcxproj  boost-pgsql-vc12.vcxproj.filters  boost-pgsql-vc8.sln  boost-pgsql-vc8.vcproj  boost-sqlite-vc11.sln  boost-sqlite-vc11.vcxproj  boost-sqlite-vc11.vcxproj.filters  boost-sqlite-vc12.sln  boost-sqlite-vc12.vcxproj  boost-sqlite-vc12.vcxproj.filters  (+2 more)
ODB/odb-examples-2.4.0/c++11/: Makefile.am  Makefile.in  c++11-mssql-vc11.vcxproj  c++11-mssql-vc11.vcxproj.filters  c++11-mssql-vc12.vcxproj  c++11-mssql-vc12.vcxproj.filters  c++11-mysql-vc11.vcxproj  c++11-mysql-vc11.vcxproj.filters  c++11-mysql-vc12.vcxproj  c++11-mysql-vc12.vcxproj.filters  c++11-oracle-vc11.vcxproj  c++11-oracle-vc11.vcxproj.filters  c++11-oracle-vc12.vcxproj  c++11-oracle-vc12.vcxproj.filters  c++11-pgsql-vc10.vcxproj  c++11-pgsql-vc10.vcxproj.filters  c++11-pgsql-vc11.vcxproj  c++11-pgsql-vc11.vcxproj.filters  c++11-pgsql-vc12.vcxproj  c++11-pgsql-vc12.vcxproj.filters  c++11-sqlite-vc11.vcxproj  c++11-sqlite-vc11.vcxproj.filters  c++11-sqlite-vc12.vcxproj  c++11-sqlite-vc12.vcxproj.filters  employee-odb.cxx  employee-odb.hxx  employee-odb.ixx  employee.sql
ODB/odb-examples-2.4.0/composite/: Makefile.am  Makefile.in  composite-mssql-vc11.vcxproj  composite-mssql-vc11.vcxproj.filters  composite-mssql-vc12.vcxproj  composite-mssql-vc12.vcxproj.filters  composite-mssql-vc8.vcproj  composite-mysql-vc11.vcxproj  composite-mysql-vc11.vcxproj.filters  composite-mysql-vc12.vcxproj  composite-mysql-vc12.vcxproj.filters  composite-mysql-vc8.vcproj  composite-oracle-vc11.vcxproj  composite-oracle-vc11.vcxproj.filters  composite-oracle-vc12.vcxproj  composite-oracle-vc12.vcxproj.filters  composite-oracle-vc8.vcproj  composite-pgsql-vc11.vcxproj  composite-pgsql-vc11.vcxproj.filters  composite-pgsql-vc12.vcxproj  composite-pgsql-vc12.vcxproj.filters  composite-pgsql-vc8.vcproj  composite-sqlite-vc11.vcxproj  composite-sqlite-vc11.vcxproj.filters  composite-sqlite-vc12.vcxproj  composite-sqlite-vc12.vcxproj.filters  composite-sqlite-vc8.vcproj  person-odb.cxx  person-odb.hxx  person-odb.ixx  person.sql
ODB/odb-examples-2.4.0/container/: Makefile.am  Makefile.in  container-mssql-vc11.vcxproj  container-mssql-vc11.vcxproj.filters  container-mssql-vc12.vcxproj  container-mssql-vc12.vcxproj.filters  container-mssql-vc8.vcproj  container-mysql-vc11.vcxproj  container-mysql-vc11.vcxproj.filters  container-mysql-vc12.vcxproj  container-mysql-vc12.vcxproj.filters  container-mysql-vc8.vcproj  container-oracle-vc11.vcxproj  container-oracle-vc11.vcxproj.filters  container-oracle-vc12.vcxproj  container-oracle-vc12.vcxproj.filters  container-oracle-vc8.vcproj  container-pgsql-vc11.vcxproj  container-pgsql-vc11.vcxproj.filters  container-pgsql-vc12.vcxproj  container-pgsql-vc12.vcxproj.filters  container-pgsql-vc8.vcproj  container-sqlite-vc11.vcxproj  container-sqlite-vc11.vcxproj.filters  container-sqlite-vc12.vcxproj  container-sqlite-vc12.vcxproj.filters  container-sqlite-vc8.vcproj  person-odb.cxx  person-odb.hxx  person-odb.ixx  person.sql
(+3246 files in other folders)
