# file      : Makefile.am
# copyright : Copyright (c) 2009-2015 Code Synthesis Tools CC
# license   : GNU GPL v2; see accompanying LICENSE file

SUBDIRS = odb/boost
dist_doc_DATA = GPLv2 LICENSE README NEWS version
EXTRA_DIST = INSTALL libodb-boost-vc8.sln libodb-boost-vc9.sln libodb-boost-vc10.sln libodb-boost-vc11.sln libodb-boost-vc12.sln bootstrap
ACLOCAL_AMFLAGS = -I m4

nobase_include_HEADERS = odb/boost.options

pkgconfigdir = @pkgconfigdir@
pkgconfig_DATA= libodb-boost.pc
