# file      : Makefile.am
# copyright : Copyright (c) 2009-2015 Code Synthesis Tools CC
# license   : ODB NCUEL; see accompanying LICENSE file

SUBDIRS = odb/oracle
dist_doc_DATA = LICENSE NCUEL README NEWS version
EXTRA_DIST = INSTALL libodb-oracle-vc8.sln libodb-oracle-vc9.sln libodb-oracle-vc10.sln libodb-oracle-vc11.sln libodb-oracle-vc12.sln bootstrap
ACLOCAL_AMFLAGS = -I m4

pkgconfigdir = @pkgconfigdir@
pkgconfig_DATA= libodb-oracle.pc
