# file      : Makefile.am
# copyright : Copyright (c) 2009-2015 Code Synthesis Tools CC
# license   : GNU GPL v2; see accompanying LICENSE file

SUBDIRS = odb/qt
dist_doc_DATA = GPLv2 LICENSE README NEWS version
EXTRA_DIST = INSTALL libodb-qt4-vc8.sln libodb-qt4-vc9.sln libodb-qt4-vc10.sln libodb-qt4-vc11.sln libodb-qt4-vc12.sln libodb-qt5-vc9.sln libodb-qt5-vc10.sln libodb-qt5-vc11.sln libodb-qt5-vc12.sln bootstrap
ACLOCAL_AMFLAGS = -I m4

nobase_include_HEADERS = odb/qt.options

pkgconfigdir = @pkgconfigdir@
pkgconfig_DATA= libodb-qt.pc
